// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders the component with no props and no a11y violations 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 8px 12px 8px 12px;
  background: #EFEFEF;
  color: #2C3236;
  font-size: 16px;
  line-height: 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  border-radius: 0px;
}

.c0 a {
  color: #2C3236 !important;
  font-size: 15px;
  line-height: 20px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin-right: 8px;
  padding-top: 2px;
  font-size: 20px;
  color: #818F9B;
}

.c1 svg {
  display: block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-info "
      data-icon="circle-info"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM256 128c17.67 0 32 14.33 32 32c0 17.67-14.33 32-32 32S224 177.7 224 160C224 142.3 238.3 128 256 128zM296 384h-80C202.8 384 192 373.3 192 360s10.75-24 24-24h16v-64H224c-13.25 0-24-10.75-24-24S210.8 224 224 224h32c13.25 0 24 10.75 24 24v88h16c13.25 0 24 10.75 24 24S309.3 384 296 384z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class=""
  >
    Alert Content
  </div>
</div>
`;

exports[`Alert renders with specific severity: alert 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 8px 12px 8px 12px;
  background: #FFDAD8;
  color: #940700;
  font-size: 16px;
  line-height: 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  border-radius: 0px;
}

.c0 a {
  color: #940700 !important;
  font-size: 15px;
  line-height: 20px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin-right: 8px;
  padding-top: 2px;
  font-size: 20px;
  color: #FF4539;
}

.c1 svg {
  display: block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-minus "
      data-icon="circle-minus"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM168 232C154.7 232 144 242.7 144 256C144 269.3 154.7 280 168 280H344C357.3 280 368 269.3 368 256C368 242.7 357.3 232 344 232H168z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class=""
  >
    Alert Content
  </div>
</div>
`;

exports[`Alert renders with specific severity: info 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 8px 12px 8px 12px;
  background: #EFEFEF;
  color: #2C3236;
  font-size: 16px;
  line-height: 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  border-radius: 0px;
}

.c0 a {
  color: #2C3236 !important;
  font-size: 15px;
  line-height: 20px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin-right: 8px;
  padding-top: 2px;
  font-size: 20px;
  color: #818F9B;
}

.c1 svg {
  display: block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-info "
      data-icon="circle-info"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM256 128c17.67 0 32 14.33 32 32c0 17.67-14.33 32-32 32S224 177.7 224 160C224 142.3 238.3 128 256 128zM296 384h-80C202.8 384 192 373.3 192 360s10.75-24 24-24h16v-64H224c-13.25 0-24-10.75-24-24S210.8 224 224 224h32c13.25 0 24 10.75 24 24v88h16c13.25 0 24 10.75 24 24S309.3 384 296 384z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class=""
  >
    Alert Content
  </div>
</div>
`;

exports[`Alert renders with specific severity: success 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 8px 12px 8px 12px;
  background: #DDFDE5;
  color: #17592B;
  font-size: 16px;
  line-height: 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  border-radius: 0px;
}

.c0 a {
  color: #17592B !important;
  font-size: 15px;
  line-height: 20px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin-right: 8px;
  padding-top: 2px;
  font-size: 20px;
  color: #3EBC64;
}

.c1 svg {
  display: block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-check "
      data-icon="circle-check"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class=""
  >
    Alert Content
  </div>
</div>
`;

exports[`Alert renders with specific severity: warning 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 8px 12px 8px 12px;
  background: #FFECCE;
  color: #704300;
  font-size: 16px;
  line-height: 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  border-radius: 0px;
}

.c0 a {
  color: #704300 !important;
  font-size: 15px;
  line-height: 20px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin-right: 8px;
  padding-top: 2px;
  font-size: 20px;
  color: #FF9F0A;
}

.c1 svg {
  display: block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-exclamation "
      data-icon="circle-exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM232 152C232 138.8 242.8 128 256 128s24 10.75 24 24v128c0 13.25-10.75 24-24 24S232 293.3 232 280V152zM256 400c-17.36 0-31.44-14.08-31.44-31.44c0-17.36 14.07-31.44 31.44-31.44s31.44 14.08 31.44 31.44C287.4 385.9 273.4 400 256 400z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class=""
  >
    Alert Content
  </div>
</div>
`;
